<resources>
    <string name="app_name">Weather Today</string>
    <string name="temperature">Temperature</string>
    <string name="condition">Condition</string>
    <string name="condition_icon">condition_icon</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>

    <string name="weather_Ad">ca-app-pub-5036155976366649/6848856253</string>
    <string name="weather_interestisl">ca-app-pub-5036155976366649/2703503785</string>

    <string name="loading">Loading&#8230;</string>
    <string name="temperature_output">%1$d&#176;%2$s</string>
    <string name="update_location">Update Location</string>
    <string name="cache_exception">No Cached Weather Data</string>
    <string name="location_permission_needed">Device location is needed for Weather GeoLocation</string>
    <string name="disable_geolocation">Change Settings</string>

    <string name="day">Day</string>
    <string name="high">High</string>
    <string name="low">Low</string>

    <string name="about_t">"     Department: CSE
     "Name: Tanvir Islam
    "
     Id: 16.02.04.104"</string>
    <string name="about_t2">"     Department: CSE
     "Name: Niloy Singha
    "
     Id: 16.02.04.109"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
