<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sdlab.jings.weathertoday.fragments.WeatherConditionFragments">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icon_na"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/weatherIconImageView"
        android:contentDescription="@string/condition_icon"
        android:adjustViewBounds="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/day"
        android:id="@+id/dayTextView"
        android:layout_below="@+id/weatherIconImageView"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:typeface="serif"
        android:textAllCaps="true"
        android:textColor="@color/light_text"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/high"
        android:id="@+id/highTemperatureTextView"
        android:layout_below="@+id/dayTextView"
        android:layout_centerHorizontal="true"
        android:textColor="@color/light_text"
        android:paddingTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/low"
        android:id="@+id/lowTemperatureTextView"
        android:layout_below="@+id/highTemperatureTextView"
        android:layout_centerHorizontal="true"
        android:textColor="@color/light_text" />

    <TextView
        android:id="@+id/descriptionDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lowTemperatureTextView"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Descrip"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:textColor="@color/light_text"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/descriptionDay"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:text="Date"
        android:textColor="@color/light_text"/>


</RelativeLayout>